# comment-response

./: .gitignore  .pylintrc  LICENSE  README.md  comment_response.py  config copy.toml  config.EXAMPLE.py  config.EXAMPLE.toml  config.toml  create_document.py  group copy.py  group.py  main.ipynb  main.py  main_rev1.ipynb  main_rev1.py  new_comment_response.py  office_tools.py  ooxml_ss.py  pyproject.toml  relevant_websites.txt  requirements.txt  shared_strings.py
.devcontainer/: devcontainer.json
comment_response/: comment.py  comment_response.py  data_prep.py  group.py  group_records.py  paragraph.py  records.py  relevant_data.py  response.py  write_docx.py
comment_response/group/: colsort.py  group_records.py  recursive_group.py  recursive_group_extras.py
config/: toml_config.py
config_loader/: load_toml_config.py
docx_tools/: __init__.py  automark.py  write_docx.py
logtools/: logtools.py
ooxml/: __init__.py  sharedstrings.py  spreadsheet.py
open_office_xml/: FileTree.py  Sheet.py  SheetFunctions.py  dataclasses.py  helpers.py
src/comment_response/: __init__.py  automark.py  comment.py  paragraph.py  records.py  response.py  section.py  toml_config.py  write_docx.py
src/comment_response/group/: colsort.py  extras.py  (+3 more)
tests/: comments - Copy.xlsx  comments.xlsx
win32_tools/: __init__.py  office_tools.py
xlsx/: workbook.py  xml.py
xlsx/cell/: cell.py  datacell.py  paragraph.py  richtext.py  run.py
xlsx/sheets/: datasheet.py  newdatasheet.py  record.py  shared_strings.py  sheet.py  sheet_copy.py  sheets.py
xlsx/styles/: style.py  styles.py
(+11 files in other folders)
